--- a/web/src/main/webapp/lingoes.html
+++ b/web/src/main/webapp/lingoes.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>运满满数据管理平台</title>
+	<title>咪咕数据管理平台</title>
 
 	
 <style type="text/css">
