--- a/web/src/main/webapp/login.html
+++ b/web/src/main/webapp/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>
-		宙斯数据管理平台<sup>V2015</sup>
+		咪咕数据管理平台<sup>V2018</sup>
 	</h1>
 
 	<div class="login" style="margin-top: 50px;">
