--- a/web/src/main/webapp/login.html
+++ b/web/src/main/webapp/login.html
@@ -75,7 +75,7 @@
 					<input type="hidden" name="to" value="reg" /> <input type="hidden"
 						name="did" value="0" />
 					<ul class="reg_form" id="reg-ul">
-						<div id="userCue" class="cue"><font color='green'>提醒：Zeus帐号与Hive帐号必须相同</font></div>
+						<div id="userCue" class="cue"><font color='green'>注册后，请联系管理员审核！</font></div>
 						<li><label for="userType" class="input-tips2">用户类型：</label>
 							<div id="userType" class="inputOuter2" style="margin-top:15px">
 								<input type="radio" name="userTypes" value="1" checked="checked"/> 个人用户
